# privmx-webendpoint

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .npmignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  CHANGELOG_stage-two.md  CONTRIBUTING.md  README.md  TODO  build-manifest.sh  build.sh  build_npm_package.sh  build_wasm.sh  eslint.config.mjs  jest.config.js  package-lock.json  package.json  playwright.config.ts  simplito-privmx-webendpoint-2.7.4.tgz  tsconfig.build.json  tsconfig.json  tsconfig.test.json  webpack.config.js  webpack.worker.config.js
.github/workflows/: tests.yml
async-engine/: CMakeLists.txt  README.md
async-engine/include/: AsyncEngine.hpp  Buffer.hpp  Mapper.hpp  WorkerPool.hpp
async-engine/src/: AsyncEngine.cpp  Mapper.cpp  WorkerPool.cpp
drivers/privmx-webendpoint-drv-context/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
drivers/privmx-webendpoint-drv-context/src/: assert.ts  index.ts  loader.js  test_ecc.ts
drivers/privmx-webendpoint-drv-crypto/: CMakeLists.txt  README.md
drivers/privmx-webendpoint-drv-crypto/include/privmx/drv/: Bindings.hpp  crypto.h
drivers/privmx-webendpoint-drv-crypto/src/: Bindings.cpp  crypto.cpp
drivers/privmx-webendpoint-drv-ecc/: CMakeLists.txt  README.md
drivers/privmx-webendpoint-drv-ecc/include/privmx/drv/: BNImpl.hpp  Bindings.hpp  ECCImpl.hpp  PointImpl.hpp  ecc.h
drivers/privmx-webendpoint-drv-ecc/src/: BNImpl.cpp  Bindings.cpp  ECCImpl.cpp  PointImpl.cpp  ecc.cpp
drivers/privmx-webendpoint-drv-net/: CMakeLists.txt  README.md
drivers/privmx-webendpoint-drv-net/include/privmx/drv/: net.h  websocket.h
drivers/privmx-webendpoint-drv-net/src/: net.cpp  websocket.js
examples/: README.md
examples/inboxes/inbox-creation/: README.md  package-lock.json  package.json  vite.config.js
examples/inboxes/inbox-submit/: README.md  package-lock.json  vite.config.js
examples/minimal/: README.md  package-lock.json  package.json  webpack.config.js
examples/minimal-kvdb-typescript/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
examples/minimal-kvdb-typescript/public/: driver-web-context.js  endpoint-wasm-module.js
examples/minimal-kvdb-typescript/src/: app.ts
examples/minimal-typescript/: README.md  package-lock.json  package.json
examples/minimal-typescript/public/: driver-web-context.js  e2ee-worker.js  endpoint-wasm-module.js  (+2 more)
patches/: emsdk-upstream.patch  poco-1.10.1-all.patch  pson-cpp.patch
privmx-webendpoint-api/: .gitignore  README.md
privmx-webendpoint-api/cpp/: CMakeLists.txt  main.cpp
privmx-webendpoint-api/cpp/include/: CustomUserVerifierInterface.hpp  Endpoint.hpp  Macros.hpp  Mapper.hpp  ProxyedTaskRunner.hpp  RemoteExecutor.hpp  WebRtcInterfaceImpl.hpp
privmx-webendpoint-api/cpp/src/: Bindings.cpp  CustomUserVerifierInterface.cpp  Endpoint.cpp  Mapper.cpp  ProxyedTaskRunner.cpp  RemoteExecutor.cpp  WebRtcInterfaceImpl.cpp
privmx-webendpoint-api/ts/: .clang-format  .gitignore  .npmignore  .npmrc  README.md  eslint.config.mjs  fixup-package-json.js  package copy.json  package-lock.json  package-template.json  package.cjs.json  package.json  prettier.config.js  tsconfig.base.json  tsconfig.esm.json  tsconfig.json  tsconfig.mjs.json  webpack.config.js  webpack.worker.config.js
scripts/: add_assets_to_npm  build-manifest.sh  build_api  build_api_and_serve_to_pub  build_async_engine  build_clang-tidy  build_driver_web_context  build_gmp  build_poco  build_privmx_core  build_privmx_endpoint  build_pson  build_secp  build_sqlite  build_webdrivers  check_dir_checksum  clean  clean_wasm  config.sh  debug_build_cpp  get_emsdk  install  lint_tidy.sh  move_wasm_assets  pipeline.sh  prepare_npm
src/: FinalizationHelper.ts  ServerTypes.ts  Types.ts  bundle.ts  index.ts
src/api/: Api.ts  BaseNative.ts  ConnectionNative.ts  CryptoApiNative.ts  EventApiNative.ts  InboxApiNative.ts  SqlApiNative.ts  StoreApiNative.ts  StreamApiNative.ts  ThreadApiNative.ts
src/crypto/: CryptoFacade.ts  EmCrypto.ts  Types.ts  Utils.ts  assert.ts  index.ts  workerHelper.ts
src/extra/: PrivmxClient.ts  PublicConnection.ts  events.ts  files.ts  inbox.ts  index.ts  managers.ts  subscriptions.ts  utils.ts
src/ioc/: Container.ts  Tokens.ts  buildConnectionApis.ts  buildWebRtcClient.ts
src/native/: BaseNative.ts  ConnectionNative.ts  CryptoApiNative.ts  EventQueueNative.ts  ExtKeyNative.ts  KvdbApiNative.ts  NativeError.ts  StoreApiNative.ts  StreamApiNative.ts
src/service/: BaseApi.ts  Connection.ts  Container.ts  CryptoApi.ts  EndpointFactory.ts  EventApi.ts  EventDispatcher.ts  EventQueue.ts  ExtKey.ts  InboxApi.ts  KvdbApi.ts  SearchApi.ts  SqlApi.ts  StoreApi.ts  StreamApi.ts  ThreadApi.ts  UserVerifierInterface.ts  WebRtcInterface.ts  buildConnectionApis.ts  buildWebRtcClient.ts  index.ts
src/webStreams/: AppServerChannel.ts  AudioManager.ts  CryptoUtils.ts  DataChannelCryptor.ts  DataChannelSession.ts  E2eeTransformManager.ts  E2eeWorker.ts  EventDispatcher.ts  KeyStore.ts  KeySyncManager.ts  Logger.ts  PeerConnectionFactory.ts  PeerConnectionManager.ts  PeerConnectionsManager.ts  PublisherManager.ts  Queue.ts  RemoteStreamListenerRegistry.ts  SignalingChannel.ts  SubscriberManager.ts  Utils.ts  WebRtcClient.ts  WebRtcClientTypes.ts  WebRtcConfig.ts  WebRtcInterface.ts  WebRtcInterfaceImpl.ts  WebWorkerHelper copy.ts  WebWorkerHelper.ts
tests/: compose.yaml  fixtures.ts  test-utils.ts
tests/datasets/: testData.ts
tests/harness/: index.html
tests/specs/: core.spec.ts  crypto.spec.ts  events.spec.ts  example.spec.ts  inbox.spec.ts  kvdb.spec.ts  store.spec.ts  stream-data.spec.ts  stream.spec.ts  streamDataChannels.spec.ts  thread.spec.ts  threadEvents.spec.ts
webendpoint-cpp/: CMakeLists.txt  main.cpp
webendpoint-cpp/include/: CustomUserVerifierInterface.hpp  Endpoint.hpp  Macros.hpp  WebRtcInterfaceImpl.hpp
webendpoint-cpp/js/: extern-post.js  loader.js  websocket.js
webendpoint-cpp/src/: Bindings.cpp  CustomUserVerifierInterface.cpp  Endpoint.cpp  WebRtcInterfaceImpl.cpp
(+142 files in other folders)
